Update BasicDowncall.java